--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Outfitter</string>
-    <string name="username_text">Username</string>
-    <string name="password_text">Password</string>
-    <string name="login_text">Login</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="cancel">Cancel</string>
+    <string name="create_account">Create Account</string>
     <string name="title_feed">Feed</string>
     <string name="title_post">Post</string>
     <string name="title_profile">Profile</string>
