--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="sign_up">Sign Up</string>
     <string name="cancel">Cancel</string>
     <string name="create_account">Create Account</string>
+    <string name="delete_account">Delete Account</string>
     <string name="title_feed">Feed</string>
     <string name="title_post">Post</string>
     <string name="title_profile">Profile</string>
