--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,14 @@
     <string name="app_name">Outfitter</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
+    <string name="sign_out">Sign Out</string>
     <string name="cancel">Cancel</string>
     <string name="create_account">Create Account</string>
     <string name="delete_account">Delete Account</string>
+    <string name="update_password">Update Password</string>
     <string name="title_feed">Feed</string>
     <string name="title_post">Post</string>
     <string name="title_profile">Profile</string>
